CCLE-3788 - fixing weeksdisplay spacing in frontpage

--- a/theme/uclashared/style/general.css
+++ b/theme/uclashared/style/general.css
@@ -18,6 +18,7 @@ html, body {background-color:#FFF; height:100%;}
     -webkit-box-shadow: inset 0 0 5px #000000;
     box-shadow:         inset 0 0 5px #000000;
     background: url([[pix:theme|banner]]) no-repeat black;
+    margin-top: 10px;
 }
 
 #dock {
